--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Daily.online</title>
-        <link rel="shortcut icon" href="/assets/themes/inspired/favicon.png" title="Favicon">
+        <title>WALLETS</title>
+        <link rel="shortcut icon" href="images/favicon.png" title="Favicon">
         <link rel="dns-prefetch" href="//s.w.org">
         <link rel="stylesheet" href="css/home.css" type="text/css" media="all">
         <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
@@ -15,7 +15,7 @@
                 <header class="header">
                     <div class="container">
                         <div class="col-xs-12 col-sm-5 logo">
-                            <a href="/"><img src="images/logo-demo.png" /></a>
+                            <a href="/"><img src="images/flash-wallet.png" /></a>
                         </div>
                         <div class="col-xs-12 col-sm-5 text-center pad0 pull-right" id="content-slide1">
                             <div class="performation">
@@ -89,9 +89,8 @@
                         <div class="slide-4">
                             <div class="container">
                                 <div class="group-content col-xs-12">
+                                    <h2>Wallets</h2>
                                     <div class="text col-xs-12">
-                                        <h3>FLASH offers fast and very low cost crypto coin transactions for loyalty, registration, and messaging which makes it useful for many applications.
-                                        </h3>
                                         <p>FLASH supports a number of online wallets including Coinomi, Coin Payments, QT (Win, Mac, Linux) and an easy to use online wallet designed for the mass consumer market. If you can make online payments, you already know how to use FLASH!</p>
                                     </div>
                                     <div>
@@ -106,32 +105,52 @@
                             </div>
                         </div>
                         <div class="download-flash" id="download-flash">
-                            <div class="container">
-                                <h3 class="title text-center">Download FLASH QT wallets</h3>
-                                <div class="col-xs-12">
-                                    <div class="col-xs-12 col-sm-6 col-box"><p><a href="https://flashcoin.io/download/flashcoin-0.10.3.0-win64-setup.exe" target="_blank" class="btn btn-primary"><img src="assets/images/pages/coin.png">Download FLASH QT wallet for Windows 64 exe File</a></p></div>
-                                    <div class="col-xs-12 col-sm-6 col-box"><p><a href="https://flashcoin.io/download/Flashcoin-arm-linux-gnueabihf.tar.gz" target="_blank" class="btn btn-primary"><img src="assets/images/pages/coin.png">Download FLASH QT wallet for Linux Arm Zip File</a></p></div>
+                            <div class="container" style="padding: 0">
+                                <div class="col-xs-12 col-sm-4">
+                                    <h2>Web Wallets</h2>
+                                    <p>With the web wallet, you can use an email address for sending and receiving coins and your public address is supported, as well.</p>
+                                    <p>The web wallet supports most browsers and mobile devices with nothing to download or install for maximum convenience.</p>
                                 </div>
-                                <div class="col-xs-12">
-                                    <div class="col-xs-12 col-sm-6 col-box"><p><a href="https://flashcoin.io/download/flashcoin-0.10.3.0-win32-setup.exe" target="_blank" class="btn btn-primary"><img src="assets/images/pages/coin.png">Download FLASH QT wallet for Windows 32 exe File</a></p></div>
-                                    <div class="col-xs-12 col-sm-6 col-box"><p><a href="https://flashcoin.io/download/Flashcoin-x86_64-unknown-linux-gnu.tar.gz" target="_blank" class="btn btn-primary"><img src="assets/images/pages/coin.png">Download FLASH QT wallet for Linux 64 Zip File</a></p></div>
-                                </div>
-                                <div class="col-xs-12">
-                                    <div class="col-xs-12 col-sm-6 col-box"><p><a href="https://flashcoin.io/download/Flashcoin-Qt.dmg" target="_blank" class="btn btn-primary"><img src="assets/images/pages/coin.png">Download FLASH QT wallet for Mac Zip File</a></p></div>
+                                <div class="col-xs-12 col-sm-8 text-center" style="border-left: 2px dotted #999;">
+                                    <h2 class="title text-center">Download FLASH QT wallets</h2>
+                                    <div class="box-center">
+                                        <div class="col-xs-12">
+                                            <div class="col-xs-12 col-sm-4 col-box">
+                                                <p><a href="https://flashcoin.io/download/flashcoin-0.10.3.0-win64-setup.exe" target="_blank"><img src="images/qt-wallet.png" ></a></p>
+                                                <p><a href="https://flashcoin.io/download/flashcoin-0.10.3.0-win64-setup.exe" target="_blank">Windows 64 exe File</a></p>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-4 col-box">
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-arm-linux-gnueabihf.tar.gz" target="_blank"><img src="images/qt-wallet.png" ></a></p>
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-arm-linux-gnueabihf.tar.gz" target="_blank">Linux Arm Zip File</a></p>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-4 col-box">
+                                                <p><a href="https://flashcoin.io/download/flashcoin-0.10.3.0-win32-setup.exe" target="_blank"><img src="images/qt-wallet.png" ></a></p>
+                                                <p><a href="https://flashcoin.io/download/flashcoin-0.10.3.0-win32-setup.exe" target="_blank">Windows 32 exe File</a></p>
+                                            </div>
+                                        </div>
+
+                                        <div class="col-xs-12">
+                                            <div class="col-xs-12 col-sm-4 col-box">
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-x86_64-unknown-linux-gnu.tar.gz" target="_blank"><img src="images/qt-wallet.png" ></a></p>
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-x86_64-unknown-linux-gnu.tar.gz" target="_blank">Linux 64 Zip File</a></p></div>
+                                            <div class="col-xs-12 col-sm-4 col-box">
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt.dmg" target="_blank"><img src="images/qt-wallet.png" ></a></p>
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt.dmg" target="_blank">Mac Zip File</a></p></div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                         <div class="slide-4">
                             <div class="container">
-                                    <div>
-                                        <h3 class="text col-xs-12"><strong>With the web wallet, you can use an email address for sending and receiving coins and your public address is supported, as well.</strong></h3>
-                                    </div>
+
                                     <div class="text col-xs-12 m20t">
+                                        <p>FLASH offers fast and very low cost crypto coin transactions for loyalty, registration, and messaging which makes it useful for many applications.
+                                        </p>
                                         <p>
                                             FLASH is designed for low cost transactions at a rapid rate, while retaining much of it’s BTC/LTC heritage to retain compatibility with third party services. We believe efficiency will be the key to enable many types of transactions including in app reward and accounting functions as well as small and tiny payments. It’s even more efficient than Litecoin; benchmarks on our blockchain have shown that up to 25,000 transactions per second can be processed by an inexpensive computer consuming less than 80 watts of power. That makes FLASH very eco-friendly.
                                         </p>
-                                        <p>FLASH offers fast and very low cost crypto coin transactions for loyalty, registration, and messaging which makes it useful for many applications.
-                                        </p>
+
                                     </div>
                                 <div class="group-content col-xs-12">
                                     <h3>The FLASH Governance Model</h3>
@@ -202,7 +221,7 @@
                 <!--<a id="create-wallet-btn" class="btn create-wallet-btn">Get an Account Now with Free Coins</a>-->
                 <footer class="footer col-xs-12">
                     <div class="container text-center">
-                        <p class="hidden-xs"><img src="assets/images/flag-footer.png" width="" class="m15r" />Originally Made in Canada. Supported by the FLASH community</p>
+                        <p class="hidden-xs"><img src="assets/images/flag-footer.png" width="" class="m15r" />Flashcoin.io is provided by the Flashcoin Foundation, Liechtenstein. Supported by the FLASH community.</p>
                     </div>
                 </footer>
             </div>
