Update content for page

--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
             <div class="home-page flash-wallet">
                 <header class="header">
                     <div class="container">
-                        <div class="col-xs-12 col-sm-5 logo">
-                            <a href="/"><img src="images/flash-wallet.png" /></a>
+                        <div class="col-xs-12">
+                            <div class="col-xs-6 logo">
+                                <a href="/"><img src="images/flash-wallet.png" /></a>
+                            </div>
+                            <div class="col-xs-6 text-right">
+                                <p class="link-top"><a href="#">Explorer</a> | <a href="#">Chart</a></p>
+                            </div>
                         </div>
-                        <div class="col-xs-12 col-sm-5 text-center pad0 pull-right" id="content-slide1">
+                        <div class="col-xs-12 col-sm-7 text-center pad0 pull-right" id="content-slide1">
                             <div class="performation">
                                 <h2 style="font-size: 35px;">Key Performance Indicators</h2>
                                 <div class="box-performation" id="box-performation">
                                     <form class="">
                                         <div class="form-group">
                                             <input class="form-control" type="text" placeholder="Addresses with Balance" value=""/>
-                                        </div>
-                                        <div class="form-group">
-                                            <input class="form-control" type="text" placeholder="Accounts with Balances" value=""/>
                                         </div>
                                         <h4>Transactions 24h</h4>
                                         <div class="col-xs-12 form-group">
@@ -62,43 +64,51 @@
                                                 <img src="images/facebook.png">
                                             </i>
                                         </a>
-                                        <h2><a href="#slide-10">Facebook</a></h2>
+                                        <h2><a href="https://www.facebook.com/FlashCoin">Facebook</a></h2>
                                     </div>
                                     <div class="col text-center">
                                         <a title="Twitter" href="https://twitter.com/FlashCoins" target="_blank"><i class="fa">
                                             <img src="images/twitter.png">
                                         </i></a>
-                                        <h2><a href="#slide-11">Twitter</a></h2>
+                                        <h2><a href="https://twitter.com/FlashCoins">Twitter</a></h2>
                                     </div>
                                     <div class="col text-center">
                                         <a title="Google Plus" href="https://plus.google.com/u/0/b/110236490072104998071/110236490072104998071" target="_blank">
                                             <i class="fa"><img src="images/google-plus.png"></i></a>
-                                        <h2><a href="#slide-11">Google Plus</a></h2>
+                                        <h2><a href="https://plus.google.com/u/0/b/110236490072104998071/110236490072104998071">Google Plus</a></h2>
                                     </div>
                                     <div class="col text-center">
-                                        <a class="slack" title="Slack" href="#" target="_blank"><i class="fa"><img src="images/slack_logo_240.png"></i></a>
-                                        <h2><a href="#slide-11">Slack</a></h2>
+                                        <a class="slack" title="Slack" href="https://flashcoin.slack.com/messages/@slackbot/" target="_blank"><i class="fa"><img src="images/slack_logo_240.png"></i></a>
+                                        <h2><a href="https://flashcoin.slack.com/messages/@slackbot/">Slack</a></h2>
                                     </div>
                                     <div class="col text-center">
-                                        <a title="BTC" href="#" target="_blank"><i class="fa"><img src="images/bitcoin.png"></i></a>
-                                        <h2><a href="#slide-11">Bitcointalk</a></h2>
+                                        <a title="BTC" href="https://bitcointalk.org/index.php?topic=1605453.0" target="_blank"><i class="fa"><img src="images/bitcoin.png"></i></a>
+                                        <h2><a href="https://bitcointalk.org/index.php?topic=1605453.0">Bitcointalk</a></h2>
                                     </div>
                                 </div>
+                                <div class="content col-xs-12"><p>FLASH is designed for small payments, due to its low transaction fees, high speed and throughput, while retaining it's BTC/LTC heritage and functionality.  This makes FLASH ideal for loyalty, registration and messaging applications and very useful to people for whom small payments mean a great deal.  We believe efficiency is very important for many types of transactions, so we benchmarked FLASH up to 25,000 txn/sec on a $700 i7 computer consuming less than 80 watts of power.  FLASH is very eco-friendly and easy on your pocketbook, too.</p></div>
+                                <ul>
+                                    <li><p>The number of coins is fixed and completely issued</p></li>
+                                    <li><p>There is zero inflation</p></li>
+                                    <li><p>Processing is optimized and tested for efficiency and high volume</p></li>
+                                    <li><p>There is no developer “slush fund” </p></li>
+                                    <li><p>Projects can be developed by anyone and donations for the developers solicited from the community</p></li>
+                                </ul>
                             </div>
                         </div>
                         <div class="slide-4">
                             <div class="container">
-                                <div class="group-content col-xs-12">
+                                <div class="group-content">
                                     <h2>Wallets</h2>
                                     <div class="text col-xs-12">
                                         <p>FLASH supports a number of online wallets including Coinomi, Coin Payments, QT (Win, Mac, Linux) and an easy to use online wallet designed for the mass consumer market. If you can make online payments, you already know how to use FLASH!</p>
                                     </div>
                                     <div>
                                         <div class="col-xs-6 text-center">
-                                            <img src="images/coinomi.jpg">
+                                            <a href="https://coinomi.com/"><img src="images/coinomi.jpg"></a>
                                         </div>
                                         <div class="col-xs-6 text-center">
-                                            <img src="images/ITEySazs.png">
+                                            <a href="https://www.coinpayments.net/"><img src="images/ITEySazs.png"></a>
                                         </div>
                                     </div>
                                 </div>
@@ -107,7 +117,8 @@
                         <div class="download-flash" id="download-flash">
                             <div class="container" style="padding: 0">
                                 <div class="col-xs-12 col-sm-4">
-                                    <h2>Web Wallets</h2>
+                                    <a class="for-desktop hidden-xs" href="/"><img src="images/flash-icon.png" width="170"/></a>
+                                    <h2 class="mobile"><a class="for-mobile hidden-sm hidden-md hidden-lg" href="/"><img src="images/flash-icon.png" width="170"/></a> Web Wallets</h2>
                                     <p>With the web wallet, you can use an email address for sending and receiving coins and your public address is supported, as well.</p>
                                     <p>The web wallet supports most browsers and mobile devices with nothing to download or install for maximum convenience.</p>
                                 </div>
@@ -127,48 +138,44 @@
                                                 <p><a href="https://flashcoin.io/download/flashcoin-0.10.3.0-win32-setup.exe" target="_blank"><img src="images/qt-wallet.png" ></a></p>
                                                 <p><a href="https://flashcoin.io/download/flashcoin-0.10.3.0-win32-setup.exe" target="_blank">Windows 32 exe File</a></p>
                                             </div>
-                                        </div>
-
-                                        <div class="col-xs-12">
                                             <div class="col-xs-12 col-sm-4 col-box">
                                                 <p><a href="https://flashcoin.io/download/Flashcoin-x86_64-unknown-linux-gnu.tar.gz" target="_blank"><img src="images/qt-wallet.png" ></a></p>
                                                 <p><a href="https://flashcoin.io/download/Flashcoin-x86_64-unknown-linux-gnu.tar.gz" target="_blank">Linux 64 Zip File</a></p></div>
                                             <div class="col-xs-12 col-sm-4 col-box">
                                                 <p><a href="https://flashcoin.io/download/Flashcoin-Qt.dmg" target="_blank"><img src="images/qt-wallet.png" ></a></p>
-                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt.dmg" target="_blank">Mac Zip File</a></p></div>
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt.dmg" target="_blank">Mac Zip File</a></p>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-4 col-box">
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt-Ubuntu-12.04-amd64.deb" target="_blank"><img src="images/qt-wallet.png" ></a></p>
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt-Ubuntu-12.04-amd64.deb" target="_blank">Ubuntu 12.04 amd64 Deb File</a></p>
+                                            </div>
+                                            <div class="col-xs-12 col-sm-4 col-box">
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt-Ubuntu-14.04-amd64.deb" target="_blank"><img src="images/qt-wallet.png" ></a></p>
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt-Ubuntu-14.04-amd64.deb" target="_blank">Ubuntu 14.04 amd64 Deb File</a></p></div>
+                                            <div class="col-xs-12 col-sm-4 col-box">
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt-Ubuntu-16.04-amd64.deb" target="_blank"><img src="images/qt-wallet.png" ></a></p>
+                                                <p><a href="https://flashcoin.io/download/Flashcoin-Qt-Ubuntu-16.04-amd64.deb" target="_blank">Ubuntu 16.04 amd64 Deb File</a></p>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
+                        <div class="exchanges-section text-center">
+                            <h2>EXCHANGES</h2>
+                            <p class="text-center"><a href="https://www.cryptopia.co.nz/" target="_blank"><img src="images/cryptopia.png" width="40%"></a></p>
+                        </div>
                         <div class="slide-4">
                             <div class="container">
-
-                                    <div class="text col-xs-12 m20t">
-                                        <p>FLASH offers fast and very low cost crypto coin transactions for loyalty, registration, and messaging which makes it useful for many applications.
-                                        </p>
-                                        <p>
-                                            FLASH is designed for low cost transactions at a rapid rate, while retaining much of it’s BTC/LTC heritage to retain compatibility with third party services. We believe efficiency will be the key to enable many types of transactions including in app reward and accounting functions as well as small and tiny payments. It’s even more efficient than Litecoin; benchmarks on our blockchain have shown that up to 25,000 transactions per second can be processed by an inexpensive computer consuming less than 80 watts of power. That makes FLASH very eco-friendly.
-                                        </p>
-
-                                    </div>
                                 <div class="group-content col-xs-12">
                                     <h3>The FLASH Governance Model</h3>
                                     <p>FLASH GovNodes are another unique and streamlined feature of FLASH that we think will help keep FLASH as a “low tax” zone for crypto.</p>
                                     <p>- There will be 101 FLASH GovNodes (Goverance Nodes) operated by FLASH Delegates.</p>
                                     <p>- These govern the FLASH blockchain.</p>
                                     <p>- GovNodes are digital assets and software that help administer the FLASH ecosystem</p></li>
-                                    <p>- GovNodes will be initially placed as a Counterparty digital asset secured by the Bitcoin blockchain.   This will be exchanged in the future for the keys to register your FLASH wallet as a GovNode.</p>
-                                    <p>- There will be a presale of up to 101 GovNodes for 1 btc each.  Participants will be issued a Counterparty asset (FLASHGOV) and after development, a QT wallet which can be used to digitally sign a vote that can be submitted via FLASH transaction to the blockchain.  With this QT wallet capability, all votes will be recorded in the FLASH blockchain.</p>
-                                    <p>- Proceeds from the presale of FLASHGOV will be used for development of the GovNodes QT wallet feature and the first version of an OTC trading app using the FLASH blockchain.</p>
+                                    <p>- GovNodes will use special keys to sign a transaction for registering your vote.</p>
+                                    <p>- Donations for the development of FLASH GovNodes will be used for the development of the GovNodes QT wallet feature, which includes the ability to send FLASH transactions with up to 40 bytes of data inside.   This data sending feature will also be enabled on the FLASH web wallet.</p>
                                     <p>Because FLASH is a very simplified and high performance version of Bitcoin/Litecoin, there are relatively few governance matters</p>
-                                    <ul>
-                                        <li><p>The number of coins is fixed and completely issued</p></li>
-                                        <li><p>There is zero inflation</p></li>
-                                        <li><p>Processing is optimized and tested for efficiency and high volume</p></li>
-                                        <li><p>There is no developer “slush fund”, all </p></li>
-                                        <li><p>Projects can be developed by anyone and donations for the developers solicited from the community</p></li>
-                                    </ul>
                                     <p>The remaining governance issues are determined via two requirements, depending on the governance task:  51% or 75%,  51/101 (Majority) or 76/101 (Supermajority)</p>
                                     <ul>
                                         <li><p>Changing the delegated PoW processor requires Majority</p></li>
@@ -214,6 +221,21 @@
                             <div class="container text-center">
                                 <h2 class="text-center">Whitepaper</h2>
                                 <p class="tu"><a href="assets/docs/FLASHWhitepaper.pdf"><button>Download our Whitepaper</button></a></p>
+                            </div>
+                        </div>
+                        <div class="road-map">
+                            <div class="container">
+                                <h2 class="text-center">Road Map</h2>
+                                <div class="text">
+                                    <p>1. We will be offering gov nodes next week.  Please contact govnode@flashcoin.io for more information.</p>
+                                    <p>2. One engineering team is focused on a major upgrade to the web wallet;</p>
+                                    <ul>
+                                        <li><p>Support for all browsers as well as responsive support for iOS and Android</p></li>
+                                        <li><p>Translation file to enable translation to any language.  Donors have agreed to provide bounties for translators in various languages</p></li>
+                                    </ul>
+                                    <p>3. Support from additional exchanges is in the works.  We are in the compliance department with a major exchange.  Expect to see a licensed exchange partner in every country, which will provide a legal framework for all FLASH users.</p>
+                                    <p>4. We are about to test the ability to add up to 40 bytes of data in FLASH transactions, this can be used for a variety of applications; OTC trading, messaging, etc.</p>
+                                </div>
                             </div>
                         </div>
                     </div>
