Update link for site

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
                     <div class="container">
                         <div class="col-xs-12">
                             <div class="col-xs-6 logo">
-                                <a href="/"><img src="images/flash-wallet.png" /></a>
+                                <a href="https://wallet.flashcoin.io/"><img src="images/flash-wallet.png" /></a>
                             </div>
                             <div class="col-xs-6 text-right">
-                                <p class="link-top"><a href="#">Explorer</a> | <a href="#">Chart</a></p>
+                                <p class="link-top"><a href="https://explorer.flashcoin.io/">Explorer</a> | <a href="https://charts.flashcoin.io/">Chart</a></p>
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-7 text-center pad0 pull-right" id="content-slide1">
