Update content page

--- a/index.html
+++ b/index.html
@@ -59,40 +59,44 @@
                             <div class="container content-slide2">
                                 <div class="content col-xs-12">
                                     <div class="col text-center">
-                                        <a title="Facebook" href="https://www.facebook.com/FlashCoin" target="_blank">
+                                        <a title="BTC" href="https://discord.gg/SANek5d" target="_blank"><i class="fa"><img src="images/discord_icon.png"></i></a>
+                                        <h2><a target="_blank" href="https://discord.gg/SANek5d">Discord</a></h2>
+                                    </div>
+                                    <div class="col text-center">
+                                        <a title="Facebook" href="https://www.facebook.com/FlashCoin-1800026016723751" target="_blank">
                                             <i class="fa">
                                                 <img src="images/facebook.png">
                                             </i>
                                         </a>
-                                        <h2><a href="https://www.facebook.com/FlashCoin">Facebook</a></h2>
+                                        <h2><a target="_blank" href="https://www.facebook.com/FlashCoin-1800026016723751">Facebook</a></h2>
                                     </div>
                                     <div class="col text-center">
                                         <a title="Twitter" href="https://twitter.com/FlashCoins" target="_blank"><i class="fa">
                                             <img src="images/twitter.png">
                                         </i></a>
-                                        <h2><a href="https://twitter.com/FlashCoins">Twitter</a></h2>
+                                        <h2><a target="_blank" href="https://twitter.com/FlashCoins">Twitter</a></h2>
                                     </div>
                                     <div class="col text-center">
                                         <a title="Google Plus" href="https://plus.google.com/u/0/b/110236490072104998071/110236490072104998071" target="_blank">
                                             <i class="fa"><img src="images/google-plus.png"></i></a>
-                                        <h2><a href="https://plus.google.com/u/0/b/110236490072104998071/110236490072104998071">Google Plus</a></h2>
+                                        <h2><a target="_blank" href="https://plus.google.com/u/0/b/110236490072104998071/110236490072104998071">Google Plus</a></h2>
                                     </div>
                                     <div class="col text-center">
                                         <a class="slack" title="Slack" href="https://flashcoin.slack.com/messages/@slackbot/" target="_blank"><i class="fa"><img src="images/slack_logo_240.png"></i></a>
-                                        <h2><a href="https://flashcoin.slack.com/messages/@slackbot/">Slack</a></h2>
+                                        <h2><a target="_blank" href="https://join.slack.com/t/flashcoin/shared_invite/MjI4NTAxNzQxODQ1LTE1MDMwMzM0MDMtMTA2OGJjY2Y5NA">Join FLASHcoin Slack</a></h2>
                                     </div>
                                     <div class="col text-center">
                                         <a title="BTC" href="https://bitcointalk.org/index.php?topic=1605453.0" target="_blank"><i class="fa"><img src="images/bitcoin.png"></i></a>
-                                        <h2><a href="https://bitcointalk.org/index.php?topic=1605453.0">Bitcointalk</a></h2>
+                                        <h2><a target="_blank" href="https://bitcointalk.org/index.php?topic=1605453.0">Bitcointalk</a></h2>
                                     </div>
                                 </div>
-                                <div class="content col-xs-12"><p>FLASH is designed for small payments, due to its low transaction fees, high speed and throughput, while retaining it's BTC/LTC heritage and functionality.  This makes FLASH ideal for loyalty, registration and messaging applications and very useful to people for whom small payments mean a great deal.  We believe efficiency is very important for many types of transactions, so we benchmarked FLASH up to 25,000 txn/sec on a $700 i7 computer consuming less than 80 watts of power.  FLASH is very eco-friendly and easy on your pocketbook, too.</p></div>
+                                <div class="content col-xs-12"><p>FLASH is designed for small payments, due to its low transaction fees, high speed, and throughput, all while retaining its BTC/LTC heritage and functionality.  This makes FLASH ideal for loyalty, registration and messaging applications, and is perfect for customers and businesses using small payments.  We know efficiency is vessential for most transactions, so we benchmarked FLASH up to 25,000 txn/sec on a $700 i7 computer consuming less than 80 watts of power.  Because of this, FLASH is eco-friendly and easy on your pocketbook.</p></div>
                                 <ul>
-                                    <li><p>The number of coins is fixed and completely issued</p></li>
-                                    <li><p>There is zero inflation</p></li>
-                                    <li><p>Processing is optimized and tested for efficiency and high volume</p></li>
-                                    <li><p>There is no developer “slush fund” </p></li>
-                                    <li><p>Projects can be developed by anyone and donations for the developers solicited from the community</p></li>
+                                    <li><p>The number of coins is fixed and completely issued.</p></li>
+                                    <li><p>There is zero inflation.</p></li>
+                                    <li><p>Processing is optimized and tested for efficiency and high volume.</p></li>
+                                    <li><p>There is no developer “slush fund”.</p></li>
+                                    <li><p>Projects can be developed by anyone and donations for the developers solicited from the community.</p></li>
                                 </ul>
                             </div>
                         </div>
@@ -101,7 +105,7 @@
                                 <div class="group-content">
                                     <h2>Wallets</h2>
                                     <div class="text col-xs-12">
-                                        <p>FLASH supports a number of online wallets including Coinomi, Coin Payments, QT (Win, Mac, Linux) and an easy to use online wallet designed for the mass consumer market. If you can make online payments, you already know how to use FLASH!</p>
+                                        <p>FLASH supports a number of online wallets including Coinomi, Coin Payments, QT (Window, Mac, Linux) and an easy to use online wallet designed for the mass consumer market. If you can make online payments, you already know how to use FLASH.</p>
                                     </div>
                                     <div>
                                         <div class="col-xs-6 text-center">
@@ -119,8 +123,8 @@
                                 <div class="col-xs-12 col-sm-4">
                                     <a class="for-desktop hidden-xs" href="/"><img src="images/flash-icon.png" width="170"/></a>
                                     <h2 class="mobile"><a class="for-mobile hidden-sm hidden-md hidden-lg" href="/"><img src="images/flash-icon.png" width="170"/></a> Web Wallets</h2>
-                                    <p>With the web wallet, you can use an email address for sending and receiving coins and your public address is supported, as well.</p>
-                                    <p>The web wallet supports most browsers and mobile devices with nothing to download or install for maximum convenience.</p>
+                                    <p>With the web wallet, you can use an email address or your public address for sending and receiving coins.</p>
+                                    <p>The web wallet supports most browsers and mobile devices. There's nothing to download or install for maximum convenience.</p>
                                 </div>
                                 <div class="col-xs-12 col-sm-8 text-center" style="border-left: 2px dotted #999;">
                                     <h2 class="title text-center">Download FLASH QT wallets</h2>
@@ -170,11 +174,10 @@
                                 <div class="group-content col-xs-12">
                                     <h3>The FLASH Governance Model</h3>
                                     <p>FLASH GovNodes are another unique and streamlined feature of FLASH that we think will help keep FLASH as a “low tax” zone for crypto.</p>
-                                    <p>- There will be 101 FLASH GovNodes (Goverance Nodes) operated by FLASH Delegates.</p>
-                                    <p>- These govern the FLASH blockchain.</p>
-                                    <p>- GovNodes are digital assets and software that help administer the FLASH ecosystem</p></li>
-                                    <p>- GovNodes will use special keys to sign a transaction for registering your vote.</p>
-                                    <p>- Donations for the development of FLASH GovNodes will be used for the development of the GovNodes QT wallet feature, which includes the ability to send FLASH transactions with up to 40 bytes of data inside.   This data sending feature will also be enabled on the FLASH web wallet.</p>
+                                    <p>- There will be 101 FLASH GovNodes (Goverance Nodes) operated by FLASH Delegates.These govern the FLASH blockchain.</p>
+                                    <p>- GovNodes are digital assets and software that help administer the FLASH ecosystem.</p></li>
+                                    <p>- They will use special keys to sign a transaction for registering your vote.</p>
+                                    <p>- Donations for the development of FLASH GovNodes will be used for the development of the GovNodes QT wallet feature, which includes the ability to send FLASH transactions with up to 40 bytes of data inside. This data sending feature will also be enabled on the FLASH web wallet.</p>
                                     <p>Because FLASH is a very simplified and high performance version of Bitcoin/Litecoin, there are relatively few governance matters</p>
                                     <p>The remaining governance issues are determined via two requirements, depending on the governance task:  51% or 75%,  51/101 (Majority) or 76/101 (Supermajority)</p>
                                     <ul>
@@ -186,7 +189,7 @@
                                     </ul>
                                     <p>New proposals can be submitted by any FLASH coin holder, but 10 GovNode votes are required  before posting on the flashcoin.io web site and GovNodes only vote in favor of a proposal, which will need to be proffered by at least 10 votes in favor.  Any proposals that don’t pass within 30 days will be removed.</p>
                                     <p>A GovNode may be transferred to any other party at will and for any reason, however, it can only vote once on any issue.  It allows secure digital signing to prove ownership of the asset and will be used in the future to migrate to a FLASH wallet that integrates the GovNode.</p>
-                                    <p>For more information or to get a govnode, please email to:  govnode@flashcoin.io
+                                    <p>For more information or to get a govnode, please email to:  <a href="emailto:govnode@flashcoin.io">govnode@flashcoin.io.</a>
                                     </p>
                                 </div>
                             </div>
@@ -226,8 +229,9 @@
                         <div class="road-map">
                             <div class="container">
                                 <h2 class="text-center">Road Map</h2>
-                                <div class="text">
-                                    <p>1. We will be offering gov nodes next week.  Please contact govnode@flashcoin.io for more information.</p>
+                                <p class="text-center form-group"><img src="images/roadmap.png"></p>
+                                <div class="text" style=" margin-top: 4%;">
+                                    <p>1. We will be offering gov nodes next week.  Please contact <a href="emailto:govnode@flashcoin.io">govnode@flashcoin.io</a> for more information.</p>
                                     <p>2. One engineering team is focused on a major upgrade to the web wallet;</p>
                                     <ul>
                                         <li><p>Support for all browsers as well as responsive support for iOS and Android</p></li>
