--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                         <div class="road-map">
                             <div class="container">
                                 <h2 class="text-center">Road Map</h2>
-                                <p class="text-center form-group"><img src="images/roadmap.png"></p>
+                                <p class="text-center form-group"><img src="images/roadmap.png"><img class="mobile" src="images/roadmap-mobile.png"></p>
                                 <div class="text" style=" margin-top: 4%;">
                                     <p>1. We will be offering gov nodes next week.  Please contact <a href="emailto:govnode@flashcoin.io">govnode@flashcoin.io</a> for more information.</p>
                                     <p>2. One engineering team is focused on a major upgrade to the web wallet;</p>
