Update bug link on page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>WALLETS</title>
+        <title>FLASH Wallet</title>
         <link rel="shortcut icon" href="images/favicon.png" title="Favicon">
         <link rel="dns-prefetch" href="//s.w.org">
         <link rel="stylesheet" href="css/home.css" type="text/css" media="all">
@@ -121,7 +121,7 @@
                         <div class="download-flash" id="download-flash">
                             <div class="container" style="padding: 0">
                                 <div class="col-xs-12 col-sm-4">
-                                    <a class="for-desktop hidden-xs" href="/"><img src="images/flash-icon.png" width="170"/></a>
+                                    <a class="for-desktop hidden-xs" href="https://wallet.flashcoin.io/"><img src="images/flash-icon.png" width="170"/></a>
                                     <h2 class="mobile"><a class="for-mobile hidden-sm hidden-md hidden-lg" href="/"><img src="images/flash-icon.png" width="170"/></a> Web Wallets</h2>
                                     <p>With the web wallet, you can use an email address or your public address for sending and receiving coins.</p>
                                     <p>The web wallet supports most browsers and mobile devices. There's nothing to download or install for maximum convenience.</p>
@@ -189,7 +189,7 @@
                                     </ul>
                                     <p>New proposals can be submitted by any FLASH coin holder, but 10 GovNode votes are required  before posting on the flashcoin.io web site and GovNodes only vote in favor of a proposal, which will need to be proffered by at least 10 votes in favor.  Any proposals that don’t pass within 30 days will be removed.</p>
                                     <p>A GovNode may be transferred to any other party at will and for any reason, however, it can only vote once on any issue.  It allows secure digital signing to prove ownership of the asset and will be used in the future to migrate to a FLASH wallet that integrates the GovNode.</p>
-                                    <p>For more information or to get a govnode, please email to:  <a href="emailto:govnode@flashcoin.io">govnode@flashcoin.io.</a>
+                                    <p>For more information or to get a govnode, please email to:  <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io.</a>
                                     </p>
                                 </div>
                             </div>
@@ -223,7 +223,7 @@
                         <div class="slide-10" id="slide-10">
                             <div class="container text-center">
                                 <h2 class="text-center">Whitepaper</h2>
-                                <p class="tu"><a href="assets/docs/FLASHWhitepaper.pdf"><button>Download our Whitepaper</button></a></p>
+                                <p class="tu"><a href="docs/FLASHWhitepaper.pdf"><button>Download our Whitepaper</button></a></p>
                             </div>
                         </div>
                         <div class="road-map">
@@ -231,7 +231,7 @@
                                 <h2 class="text-center">Road Map</h2>
                                 <p class="text-center form-group"><img src="images/roadmap.png"><img class="mobile" src="images/roadmap-mobile.png"></p>
                                 <div class="text" style=" margin-top: 4%;">
-                                    <p>1. We will be offering gov nodes next week.  Please contact <a href="emailto:govnode@flashcoin.io">govnode@flashcoin.io</a> for more information.</p>
+                                    <p>1. We will be offering gov nodes next week.  Please contact <a href="mailto:govnode@flashcoin.io">govnode@flashcoin.io</a> for more information.</p>
                                     <p>2. One engineering team is focused on a major upgrade to the web wallet;</p>
                                     <ul>
                                         <li><p>Support for all browsers as well as responsive support for iOS and Android</p></li>
